# juce-starter-pack

./: DEVELOPMENT.md  README.md  cookiecutter.json  pyproject.toml
tests/: __init__.py  test_template.py
{{cookiecutter.plugin_name_lowercase}}/: .gitignore  .gitmodules  CMakeLists.txt  README.md
{{cookiecutter.plugin_name_lowercase}}/scripts/: element_dev.sh
{{cookiecutter.plugin_name_lowercase}}/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
